	'sy/sydestination.h'.
2015-03-27 Fred Gleason <fredg@paravelsystems.com>
	* Added 'SyLwrpClient::srcChannels()',
	'SyLwrpClient::setSrcChannels()', 'SyLwrpClient::srcPacketSize()',
	'SyLwrpClient::setSrcPacketSize()', 'SyLwrpClient::srcShareable()',
	'SyLwrpClient::setSrcShareable()', 'SyLwrpClient::dstChannels()' and
	'SyLwrpClient::setChannels()' methods.
	* Implemented an 'IFC' [Interface Address] LWRP command in
	'sy/sylwrp_server.cpp' and 'sy/lwrp_server.h'.
2015-03-28 Fred Gleason <fredg@paravelsystems.com>
	* Modifed the 'LWRP' field in the 'VER' command to return
	SWITCHYARD_PROTOCOL_VERSION.
2015-03-28 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a fencepost error when determining maximum slot count
	in 'sy/syrouting.cpp'.
2015-03-29 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the package version to 0.10.0.
2015-04-04 Fred Gleason <fredg@paravelsystems.com>
	* Cleaned up warning in 'tests/sytone.cpp'.
2015-04-04 Fred Gleason <fredg@paravelsystems.com>
	* Increased 'SWITCHYARD_MAX_SLOTS' to 32 in 'sy/syconfig.h'.
	* Refactored code in 'sy/syadv_server.cpp' and 'sy/syadv_server.h'
	to allow more than eight streams to be advertised.
2015-04-05 Fred Gleason <fredg@paravelsystems.com>
	* Incremented the library version to 2:0:1.
	* Incremented the package version to 0.10.1.
2015-11-05 Fred Gleason <fredg@paravelsystems.com>
	* Added an 'unsigned id' parameter to the constructor and signals
	of the 'SyLwrpClient' class in 'sy/sylwrp_client.cpp' and
	'sy/sylwrp_client.h'.
2015-11-05 Fred Gleason <fredg@paravelsystems.com>
	* Added a 'SyDestination::setStreamAddress(const QString &) method
	in 'sy/sydestination.cpp' and 'sy/sydestination.h'.
2015-11-06 Fred Gleason <fredg@paravelsystems.com>
	* Fixed a bug in 'sy/sylwrp_client.cpp' and 'sy/syclient_lwrp.h'
	where the 'SyLwrpClient::hostName()' method would return the connected
	IP address rather than the configured host name of the node.