@@ -25,6 +25,7 @@ SOURCES += sygpio_server.cpp
 SOURCES += sylwrp_clientconnection.cpp
 SOURCES += sylwrp_server.cpp
 SOURCES += symcastsocket.cpp
+SOURCES += synode.cpp
 SOURCES += syprofile.cpp
 SOURCES += sysyslog.cpp
 SOURCES += syringbuffer.cpp
@@ -44,6 +45,7 @@ HEADERS += sygpio_server.h
 HEADERS += sylwrp_clientconnection.h
 HEADERS += sylwrp_server.h
 HEADERS += symcastsocket.h
+HEADERS += synode.h
 HEADERS += syprofile.h
 HEADERS += sysyslog.h
 HEADERS += syringbuffer.h
