@@ -309,3 +309,10 @@
 	* Fixed a bug in 'sy/sylwrp_client.cpp' and 'sy/syclient_lwrp.h'
 	where the 'SyLwrpClient::hostName()' method would return the connected
 	IP address rather than the configured host name of the node.
+2015-11-06 Fred Gleason <fredg@paravelsystems.com>
+	* Added a 'SyLwrpClient::hostAddress()' method in 'sy/sylwrp_client.cpp'
+	and 'sy/sylwrp_client.h'.
+	* Added an 'SyNode' class in 'sy/synode.cpp' and 'sy/synode.h'.
+	* Added a 'const SyNode *' parameter to the
+	'LwrpClient::sourceChanged()' and 'LwrpClient::destinationChanged()'
+	signals in 'sy/synode.cpp' and 'sy/synode.h'.
